--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -6,21 +6,21 @@
 
         <!-- Card Stack -->
         <img [ngStyle]="{'right.px': i * 5}" *ngFor="let c of [0,1,2,3]; let i = index;"
-            src="/assets/img/cards/card_cover.png">
+            src="./assets/img/cards/card_cover.png">
 
-        <img (click)="takeCard()" class="top-card" style="right: 25px;" src="/assets/img/cards/card_cover.png">
+        <img (click)="takeCard()" class="top-card" style="right: 25px;" src="./assets/img/cards/card_cover.png">
 
         <!-- Stack for played cards -->
-        <img *ngFor="let card of game.playedCards" class="played-card" src="/assets/img/cards/{{ card }}.png">
+        <img *ngFor="let card of game.playedCards" class="played-card" src="./assets/img/cards/{{ card }}.png">
 
         <!-- Current card (Animation) -->
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px;"
-            src="/assets/img/cards/{{ currentCard }}.png">
+        <img (click)="takeCard()" *ngIf="game.pickCardAnimation" class="pick-card" style="right: 25px;"
+            src="./assets/img/cards/{{ game.currentCard }}.png">
 
     </div>
 </div>
 
-<app-rule-description [card]="currentCard" class="pin-bottom"></app-rule-description>
+<app-rule-description [card]="game.currentCard" class="pin-bottom"></app-rule-description>
 
 <button mat-fab color="primary" class="btn-add" (click)="openDialog()">
     <mat-icon>add</mat-icon>
