--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,8 +1,5 @@
 <div class="start-screen">
-    <img src="assets/img/startscreen_background.jpg" >
-
-
     <div class="start-label-box">
-        <button (click)="newGame()">Start Game</button>
+        <button (click)="newGame()">Start new Ring of Fire-Game</button>
     </div>
 </div>
