--- a/src/app/player-mobile/player-mobile.component.scss
+++ b/src/app/player-mobile/player-mobile.component.scss
@@ -1,33 +1,29 @@
 .player {
-    overflow: hidden;
-    width: 300px;
+    min-width: 80px;
+    
     display: flex;
     align-items: center;
+    flex-direction: column;
     text-align: center;
     background-color: grey;
-    border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
     
     span {
-        font-size: 24px;
-        margin-left: 16px;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
-        height: 25px;
+        font-size: 14px;
+        
     }
     
+
     img {
-        width: 50px;
-        height: 50px;
+        width: 35px;
+        height: 35px;
         object-fit: contain;
         border-radius: 100%;
+        margin-top: 5px;
     }
 }
 
-
-
 .player-active {
     background-color: orange !important;
-    width: 350px;
 }
