--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -5,26 +5,32 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    img {
-        height: 100vh;
-        width: 100vw;
-    }
+    background-image: url("^assets/img/startscreen_background.jpg");
+    background-repeat: no-repeat;
+    object-fit: contain;
+    background-position: center;
+    background-size: cover;
+
 }
 
 .start-label-box {
     position: absolute;
-    bottom: 350px;
 
     button {
         cursor: pointer;
         font-size: 32px;
-        height: 10vh;
+        height: auto;
         width: 30vw;
+        padding: 15px;
         border-radius: 10px;
         border: none;
         background: linear-gradient(21deg,rgba(255,0,0,1) 0%,rgba(255,231,3,0.8) 50%,rgba(255,0,0,1) 100%);
         background-size: 360% 360%;
         animation: gradient-animation 9s ease infinite;
+
+        @media (max-width: 960px) {
+            width: 300px;
+        }
 
         &:hover {
             filter: brightness(0.8);
