some minor bug fixed

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -3,6 +3,8 @@
     height: 100vh;
     max-width: 100%;
     background-image: url("/assets/img/board.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
